/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "GroupByConfigMessage";

message GroupByConfigDto {
    repeated string groupByColumn = 1;

    message Summary {
        required string name = 1;
        required string function = 2;
        required string target = 3;
        optional bool isRegex = 4;
        repeated string arguments = 5;
    }
    repeated Summary summaries = 2;

    optional string countColumnName = 3;

    repeated string subtotals = 4;
}
